# mac-disk-cleaner

./: .gitignore  AGENTS.md  README.md  analyzer.py  config.py  drive_detector.py  executor.py  main.py  progress_estimator.py  pyproject.toml  requirements.txt  scanner.py  ssd_detector.py  utils.py
.agents/skills/commit-and-push/: SKILL.md
docs/: code-architecture.md  features.md  high-level-system-design.md  profiling.md  system-specifications.md
scripts/: profile_report_generation.py
src/disk_space_manager/: __init__.py  __main__.py  analyzer.py  archive_targets.py  cli.py  drive_detector.py  executor.py  progress_estimator.py  scanner.py  ui.py  workflows.py
tests/: test_archive.py  test_drive_detector.py  test_profiling.py  test_progress.py
