[project]
name = "disk-space-manager"
version = "1.0.0"
description = "A CLI tool to manage disk space on Unix-like systems by analyzing usage, cleaning caches, and archiving old files to external drives or local folders"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
disk-space-manager = "disk_space_manager.cli:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
